# axuus-hacs

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: tests.yml  validate.yml
custom_components/axuus/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  icons.json  manifest.json  sensor.py  services.yaml  switch.py
custom_components/axuus/api/: __init__.py  client.py  exceptions.py  models.py
custom_components/axuus/translations/: en.json
research/: DESIGN.md
tests/: conftest.py  test_binary_sensor.py  test_button.py  test_client.py  test_config_flow.py  test_coordinator.py  test_diff_properties.py  test_init.py  test_models.py  test_options_properties.py  test_sensor.py  test_sensor_properties.py  test_service_properties.py  test_services.py  test_switch.py  test_switch_properties.py
tests/fixtures/: get_access_codes.json  get_guest_vehicles.json  get_resident_vehicles.json  login_page_excerpt.html
