[project]
name = "axuus-hacs"
version = "0.0.1"
description = "Home Assistant integration for Axuus residential gate access"
requires-python = ">=3.13"

[project.optional-dependencies]
dev = [
    "aiohttp>=3.9",
    "aioresponses>=0.7.6",
    "hypothesis>=6.100",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]
